# spades

./: .bumpversion.cfg  .dockerignore  .gitignore  .mypy.ini  Dockerfile  Dockerfile.static  Pipfile  README.md  __init__.py  __version__.py  app.py  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: linux-quality-assurance.yml
docsite/: Dockerfile
nginx/: .dockerignore  Dockerfile  nginx.conf  requirements.txt
nginx/conf.d/: static.conf
spades/: __init__.py  auth.py  config.py  exceptions.py  main.py
spades/game/: __init__.py  turn.py
spades/models/: user.py
spades/templates/: base.html  bid.html  gameboard.html  index.html  lobby.html  login.html
static/: README.md  package-lock.json  package.json  requirements.txt
static/webui/: .dockerignore  package-lock.json
tasks/: __init__.py  app.py  build.py  certs.py  compose.py  config.py  doc.py  docs.py  docsite.py  filesystem.py  prod.py  qa.py  setup.py  validate.py  webapp.py  webui.py
tasks/builds/: static.py
tasks/package_manager/: __init__.py  github.py
tests/: __init__.py  conftest.py  test_book.py  test_card.py  test_deck.py  test_game.py  test_hand.py  test_player.py  test_version.py
webapp/: Dockerfile  __init__.py  app.py  config.py  example.css  requirements.txt
webapp/spades/: __init__.py  auth.py  bid.py  book.py  card.py  config.py  deck.py  exceptions.py  game.py  hand.py  main.py  player.py  session.py  turn.py
webapp/tests/: __init__.py  test_book.py  test_book.py.bak  test_card.py  test_deck.py  (+5 more)
(+34 files in other folders)
