[tool.proman.versioning]
version = "0.1.0"
enable_devreleases = false

[[tool.proman.versioning.files]]
filepath = "spades/__init__.py"
pattern = "__version__ = '${version}'"

[[tool.proman.versioning.files]]
filepath = "tests/test_version.py"
pattern = "__version__ == '${version}'"

[[tool.proman.versioning.files]]
filepath = "pyproject.toml"
pattern = "version = \"${version}\""

[[tool.proman.versioning.files]]
filepath = "setup.cfg"
pattern = "version = \"${version}\""

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.*:"
]
addopts = "--no-start-live-server"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
