[metadata]
name = spades
version = "0.1.0"
module = "spades"
author = "Jesse P. Johnson"
author_email = "jpj6652@gmail.com"
home-page = "https://github.com/kuwv/spades"
classifiers =
    "License :: OSI Approved :: Apache Software License"

[options]
install_requires =
    pandas
    numpy
    scipy
    alpaca-trade-api
    argufy
packages = spades
# package_dir=
#     =src

[options.entry_points]
console_scripts =
    invest = spades.__main__:main
